# adisha_ws

./: .gitignore  README.md
src/adisha_controller/: package.xml  setup.cfg  setup.py
src/adisha_controller/adisha_controller/: adisha_dxlsyncrwpos.py
src/adisha_controller/adisha_controller/submodule/: adisha_controller_config.py  adisha_dxlsyncrwpos_node.py
src/adisha_controller/config/: adisha_joints_info.yaml  adisha_pose.yaml
src/adisha_controller/config/motion_sequence/: adisha_motseq_0.yaml
src/adisha_interface/: CMakeLists.txt  package-lock.json  package.json  package.xml
src/adisha_interface/include/adisha_interface/: adisha_motion_sequencer.hpp  adisha_pose_editor.hpp
src/adisha_interface/msg/: JointTorque.msg  JointVal.msg
src/adisha_interface/scripts/: adisha_app.js
src/adisha_interface/src/: adisha_motion_sequencer_main.cpp  adisha_pose_editor_main.cpp
src/adisha_interface/src/adisha_interface/: adisha_pose_editor.cpp
src/adisha_interface/web/: index.html
src/adisha_main/: package.xml  setup.py
src/adisha_main/config/: adisha_robot_info.yaml
src/adisha_test/: package.xml  setup.cfg  setup.py
src/adisha_test/adisha_test/example/: simple_publisher.py  simple_subscriber.py  yaml_access.py
src/adisha_test/config/: test.yaml
src/adisha_test/launch/: simple_pubsub_launch.py
